# dsk

./: .gitattributes  CMakeLists.txt  CMakePresets.json  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
example/compr_conv/: main.cpp
example/http_static_server/: main.cpp
example/wiki_hist/: classify.hpp  main.cpp
include/dsk/: any_resumer.hpp  async_op.hpp  async_op_group.hpp  awaitables.hpp  config.hpp  continuation.hpp  default_allocator.hpp  err.hpp  expected.hpp  generator.hpp  gumbo.hpp  hosted_async_op.hpp  inline_scheduler.hpp  optional.hpp  res_pool.hpp  res_queue.hpp  resume_on.hpp  resumer.hpp  scheduler.hpp  simple_thread_pool.hpp  start_on.hpp  stop_obj.hpp  sync_wait.hpp  task.hpp  until.hpp
include/dsk/asio/: README.md  buf.hpp  config.hpp  connect.hpp  default_io_scheduler.hpp  endpoint.hpp  file.hpp  ip.hpp  read.hpp  read_at.hpp  read_until.hpp  recv_file.hpp  send_file.hpp  ssl.hpp  tcp.hpp  thread_pool.hpp  timer.hpp  transfer.hpp  udp.hpp  use_async_op.hpp  write.hpp  write_at.hpp
include/dsk/charset/: ascii.hpp  bom.hpp  icu.hpp
include/dsk/compr/: auto_decompressor.hpp  bz2.hpp  common.hpp  zlib.hpp  zstd.hpp
include/dsk/curl/: client.hpp  easy.hpp  err.hpp  info.hpp  list.hpp  multi.hpp  opt.hpp  share.hpp  str.hpp  url.hpp
include/dsk/grpc/: channel_pool.hpp  cq.hpp  cq_pool.hpp  err.hpp  exam.hpp  rpc.hpp  srv.hpp  timer.hpp
include/dsk/http/: conn.hpp  content_type.hpp  file_handler.hpp  mime.hpp  msg.hpp  parse.hpp  range_header.hpp  url.hpp
include/dsk/jser/: cpo.hpp  dsl.hpp  err.hpp  read.hpp  write.hpp
include/dsk/jser/json/: simdjson.hpp  writer.hpp
include/dsk/jser/msgpack/: err.hpp  fmt.hpp  reader.hpp  writer.hpp
include/dsk/mysql/: conn.hpp  conn_pool.hpp  fields.hpp
include/dsk/pq/: conn.hpp  data_types.hpp  err.hpp  result.hpp
include/dsk/redis/: adapters.hpp  cmds.hpp  conn.hpp  req.hpp  src.hpp
include/dsk/sqlite3/: conn.hpp  err.hpp  global.hpp  header.hpp  settings.hpp  spatialite.hpp  stmt.hpp
include/dsk/sqlite3/tokenizer/: fts5.hpp  guni.hpp  snowball_stemmer.hpp
include/dsk/tbb/: allocator.hpp  thread_pool.hpp
include/dsk/util/: allocate_unique.hpp  allocator.hpp  atomic.hpp  base64.hpp  buf.hpp  byte_str.hpp  concepts.hpp  condition_variable.hpp  conditional_lock.hpp  ct.hpp  ct_basic.hpp  ct_vector.hpp  debug.hpp  deque.hpp  endian.hpp  filesystem.hpp  flat_map.hpp  flat_set.hpp  from_str.hpp  function.hpp  handle.hpp  hash.hpp  heterogeneous_comparator.hpp  index_array.hpp  isclose.hpp  jemalloc.hpp  latch.hpp  list.hpp  lru_cache.hpp  map.hpp  mimalloc.hpp  mutex.hpp  num_cast.hpp  ordered_unique_range.hpp  params.hpp  perf_counter.hpp  periodic_reporter.hpp  range.hpp  ref_holder.hpp  scope_exit.hpp  (+16 more)
include/dsk/win/: thread_pool.hpp
test/: CMakeLists.txt
test/asio/: main.cpp
test/basic/: main.cpp
test/compr/: main.cpp
test/curl/: main.cpp
test/grpc/: example.proto  main.cpp
test/http/: main.cpp
test/jser/: main.cpp
test/mysql/: main.cpp
test/pq/: main.cpp
test/redis/: main.cpp
test/sqlite/: main.cpp
